<resources>
    <string name="app_name">LaLiga Manager</string>
    <string name="action_settings">Ajustes</string>
    <string name="login">Acceder</string>
    <string name="signin">Registrarse</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="repeatPassword">Repetir contraseña</string>
    <string name="mail">EMail</string>
    <string name="title_activity_league_home">LeagueHome</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="button">Button</string>
</resources>
